[gd_scene load_steps=3 format=3 uid="uid://dcy17xqbtsogm"]

[ext_resource type="Script" uid="uid://byqgbq6ccgjxk" path="res://scripts/in_game_menu.gd" id="1_j7b2m"]
[ext_resource type="FontFile" uid="uid://d03qpdmp2vhix" path="res://assets/fonts/PixelOperator8.ttf" id="1_s348h"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7b2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -213.0
offset_right = 254.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s348h")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="BackToMMButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s348h")
theme_override_font_sizes/font_size = 48
text = "Main Menu"
autowrap_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s348h")
theme_override_font_sizes/font_size = 48
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMMButton" to="." method="_on_back_to_mm_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
